[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["darkphoenix <https://github.com/darkphoenix2601>"]
description = ""
name = "stringsession"
version = "0.1.0"
[tool.poetry.dependencies]
TgCrypto = "^1.2.2"
cryptg = "^0.2.post2"
pyrogram = "^1.3.1"
python = "^3.8"
telethon = "^1.24.0"
[tool.poetry.dev-dependencies]
